Fix lack of color contrast for the project version and license selected on the Licenses page

--- a/packages/help-extension/style/base.css
+++ b/packages/help-extension/style/base.css
@@ -223,10 +223,6 @@
   color: #fff;
 }
 
-.jp-Licenses-Grid.jp-RenderedHTMLCommon .jp-mod-selected code {
-  color: #fff;
-}
-
 /* license text */
 .jp-Licenses-Text {
   min-width: calc(10 * var(--jp-ui-font-size1));
